# DPDT

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
backend/: __init__.py  main.py
backend/api/: __init__.py  clean.py  collapse.py  poison.py  report.py  scan.py
backend/engines/: __init__.py  activation_clustering.py  cleanser.py  influence_engine.py  ingest_engine.py  risk_engine.py  spectral_engine.py  trigger_detector.py
backend/utils/: __init__.py  hash_utils.py  logger.py  pdf_export.py  visuals.py
docs/: API.md  ARCHITECTURE.md  EXAMPLES.md
frontend/: dashboard.js  index.html  styles.css
tests/: conftest.py  test_api.py  test_engines.py
